--- a/.github/workflows/workflow-demo.yml
+++ b/.github/workflows/workflow-demo.yml
@@ -30,17 +30,17 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      #create .zip package
-      - name: Generate deployment package
-        run: zip -r deploy.zip . -x '*.git*'
-      # Runs a set of commands using the runners shell
-
-      - name: Create bucket in S3
-        uses: aitorres/aws-s3-create-bucket@v1.2.0
-        with:
-        bucket-name: 'my-unique-name-for-my-bucket'
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: 'us-east-1'
-        acl: 'private'
-        deployment_package: deploy.zip
+     # #create .zip package
+     # - name: Generate deployment package
+     #   run: zip -r deploy.zip . -x '*.git*'
+     # # Runs a set of commands using the runners shell
+#
+     # - name: Create bucket in S3
+     #   uses: aitorres/aws-s3-create-bucket@v1.2.0
+     #   with:
+     #   bucket-name: 'my-unique-name-for-my-bucket'
+     #   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+     #   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+     #   aws-region: 'us-east-1'
+     #   acl: 'private'
+     #   deployment_package: deploy.zip
