--- a/.github/workflows/workflow-demo.yml
+++ b/.github/workflows/workflow-demo.yml
@@ -1,46 +1,10 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI/CD terraform AWS
-
-# Controls when the workflow will run
-on: 
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: my-first-workflow
+on: workflow_dispatch
 jobs:
-  # This workflow contains a single job called "build"
-  deploy:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  first_job:
+    runs-on: windows-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout code
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-     # #create .zip package
-     # - name: Generate deployment package
-     #   run: zip -r deploy.zip . -x '*.git*'
-     # # Runs a set of commands using the runners shell
-#
-     # - name: Create bucket in S3
-     #   uses: aitorres/aws-s3-create-bucket@v1.2.0
-     #   with:
-     #   bucket-name: 'my-unique-name-for-my-bucket'
-     #   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-     #   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-     #   aws-region: 'us-east-1'
-     #   acl: 'private'
-     #   deployment_package: deploy.zip
+      - name: Print greeting
+        run: echo "Hello World!!!"
+      - name: Print goodbye
+        run: echo "ok...bye!!"
