--- a/.github/workflows/aws-workflow.yml
+++ b/.github/workflows/aws-workflow.yml
@@ -23,10 +23,10 @@ jobs:
       
       - name: Terraform Apply
         uses: hashicorp/terraform-github-actions/apply@v0.4.0
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: 'us-east-1'
+       #with:
+       #  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+       #  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+       #  aws-region: 'us-east-1'
 
       ##create .zip package
       #- name: Generate deployment package
