--- a/.github/workflows/aws-workflow.yml
+++ b/.github/workflows/aws-workflow.yml
@@ -23,10 +23,11 @@ jobs:
       
       - name: Terraform Apply
         #uses: hashicorp/terraform-github-actions/apply@v0.4.0
-        uses: dflook/terraform-apply@v1
+        uses: kciter/terraform-apply-for-aws-action@v3
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          auto_approve: true
           #aws-region: 'us-east-1'
 
       ##create .zip package
