--- a/.github/workflows/aws-workflow.yml
+++ b/.github/workflows/aws-workflow.yml
@@ -25,8 +25,8 @@ jobs:
         #uses: hashicorp/terraform-github-actions/apply@v0.4.0
         uses: kciter/terraform-apply-for-aws-action@v3
         with:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           auto_approve: true
           #aws-region: 'us-east-1'
 
