--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -12,9 +12,9 @@ jobs:
       - name: Upload file to bucket
         uses: zdurham/s3-upload-github-action@master
         with:
-          args: --acl public-read
+          #args: --acl public-read
           FILE: ./main.tf
-          AWS_REGION: 'us-east-1'
+          AWS_REGION: 'eu-north-1'
           #S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
           #S3_KEY: ${{ secrets.S3_KEY }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
