--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -8,6 +8,15 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@master
+
+      - uses: shallwefootball/s3-upload-action@master
+        name: Upload S3
+        id: S3
+        with:
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          aws_bucket: 'test-github-action-demo-bucket'
+          AWS_REGION: 'eu-north-1'
    
       - name: Upload file to bucket
         uses: zdurham/s3-upload-github-action@master
