--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -16,7 +16,7 @@ jobs:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: 'test-github-action-demo-bucket'
-          AWS_REGION: 'eu-north-1'
+          #AWS_REGION: 'eu-north-1'
    
       - name: Upload file to bucket
         uses: zdurham/s3-upload-github-action@master
