--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -13,7 +13,7 @@ jobs:
         name: Upload S3
         id: S3
         with:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
           aws_bucket: 'test-github-action-demo-bucket'
           #AWS_REGION: 'eu-north-1'
